did some tests